<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tweets</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="action_setting">Settings</string>
    <string name="title_activity_timeline">Home Timeline</string>
    <string name="Username">Example Name</string>
    <string name="timestamp">15 minutes ago</string>
    <string name="post_tweet">Tweet</string>
    <string name="twitter_profile_image">Profile Image</string>
    <string name="hint_etComposeTweet">What\'s Happening?</string>
    <string name="fragment_compose_title">What\'s Happening?</string>
    <string name="compose_action">Compose tweet</string>
    <string name="my_profile">Profile</string>
    <string name="home_timeline">Home</string>
    <string name="mentions_timeline">Mentions</string>
    <string name="tvUserName">Edwin Peraza</string>
    <string name="tvScreenName">\@edwinperaza</string>
    <string name="tvDescription">Profile Description...</string>

    <string name="tvFollowers">10 Followers</string>
    <string name="Followers">Followers</string>
    <string name="error_fetch_followers">Error Fetching Followers</string>


    <string name="Following">Following</string>
    <string name="tvFollowing">8 Following</string>
    <string name="error_fetch_followings">Error Fetching Followings</string>

</resources>